--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .footer-left p {
-    font-size: 13px;
+    font-size: 15px;
     color: black;
     font-weight: 200;
 }
@@ -111,12 +111,6 @@ a {
     color: inherit;
     text-decoration: none;
 }
-
-/* Ensure footer is always at the bottom */
-html, body {
-    height: 100%;
-}
-
 
 body {
     font-family: 'Anonymous Pro', monospace;
@@ -350,5 +344,17 @@ footer {
         font-size: 38px;
     }
 }
+    /* Back Button */
+    .back-btn img {
+        width: 40px; /* Adjust the size of the image */
+        height: auto;
+        cursor: pointer; /* Change cursor to pointer to indicate it's clickable */
+        transition: transform 0.3s ease; /* Add transition for smooth scaling effect */
+        margin-left: 3vw;
+    }
+
+    .back-btn img:hover {
+        transform: scale(1.1); /* Slight zoom effect on hover */
+    }
 
 
